# Jupiter_MotorControl

./: .clang-format  .gitignore  CMakeLists.txt  README  annotated.html  annotated_dup.js  backemf__pll__observer_8h_source.html  bldc__6step__common_8h_source.html  bldc__6step__sensored_8h_source.html  bldc__6step__sensorless_8h_source.html  bldc__driver_8h_source.html  bldc__model_8h_source.html  classes.html  classsim__bridge_1_1MotorSimulationBridge-members.html  classsim__bridge_1_1MotorSimulationBridge.html  dir_10cb6e83a29805e1e2bc57a037061da6.html  dir_10cb6e83a29805e1e2bc57a037061da6.js  dir_10cb6e83a29805e1e2bc57a037061da6_dep.map  dir_10cb6e83a29805e1e2bc57a037061da6_dep.md5  dir_171063ca2b6d8df6d9147a9ad3041fe6.html  dir_175b7376e72193cda5f7afa72dd0c52d.html  dir_1feda6df789d47336e6e5f2d2d4e113c.html  dir_1feda6df789d47336e6e5f2d2d4e113c_dep.map  dir_1feda6df789d47336e6e5f2d2d4e113c_dep.md5  dir_21644996db48adfe9801bc78a938a1c4.html  dir_21644996db48adfe9801bc78a938a1c4.js  dir_3067f7d8f9aa80e9f740e3277c5af1f3.html  dir_32ec5f5f8488bc4325b9dd1a6a1a2659.html  dir_32ec5f5f8488bc4325b9dd1a6a1a2659_dep.map  dir_32ec5f5f8488bc4325b9dd1a6a1a2659_dep.md5  dir_3bd6325eddb063b757a04469f970c85e.html  dir_3bd6325eddb063b757a04469f970c85e_dep.map  dir_3bd6325eddb063b757a04469f970c85e_dep.md5  dir_4270bfced15e0e73154b13468c7c9ad9.html  dir_4270bfced15e0e73154b13468c7c9ad9.js  dir_43be774b331fe276476c8c0249b22937.html  dir_43be774b331fe276476c8c0249b22937_dep.map  dir_43be774b331fe276476c8c0249b22937_dep.md5  dir_463f344bacfc6f472c7d9810ec516f92.html  dir_463f344bacfc6f472c7d9810ec516f92.js  (+252 more)
.github/workflows/: deploy_doxygen.yml
core/bldc/: bldc_motor_control.md
core/bldc/inc/: bldc_driver.h
core/bldc/src/: bldc_driver.c
core/bldc_6step/: bldc_6step_motor_control.md
core/bldc_6step/inc/: bldc_6step_common.h  bldc_6step_driver.h  bldc_6step_sensored.h  bldc_6step_sensorless.h
core/bldc_6step/src/: bldc_6step_sensored.c  bldc_6step_sensorless.c  bldlc_6step_common.c
core/foc_pmsm/inc/: foc_common.h  foc_field_weakening.h  foc_observer.h  foc_sensored.h
core/foc_pmsm/src/: foc_common.c  foc_field_weakening.c  foc_sensored.c
core/foc_pmsm/src/observers/: backemf_pll_observer.c  backemf_pll_observer.h
core/inc/: motor.h  motor_error.h
core/pmsm/inc/: pmsm_driver.h
core/pmsm/src/: pmsm_driver.c
core/src/: motor.c
core/stepper/inc/: stepper_motor_driver.h
core/stepper/src/: stepper_motor_driver.c
doxygen/: Doxyfile  main_page.md
hal/inc/: hal.h
hal/src/: hal_sim.c
scripts/foc_visualizer/: __main__.py  foc_common_interface.py
scripts/pll_visualizer/: __main__.py  pll_interface.py  pll_sweep_gains.py  pll_visualizer.py
scripts/svpwm_transform_visualizer/: __main__.py  clarke_phase_visualizer.py  inverse_park_visualizer.py  noise_generator.py  park_visualizer.py  svpwm_transform_interface.py  svpwm_visualizer.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  enums_0.js  enums_1.js  enums_2.js  enums_4.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  (+30 more)
simulation/inc/: sim_manager.h
simulation/models/inc/: bldc_model.h  motor_model.h  pmsm_model.h
simulation/models/src/: bldc_model.c  motor_model.c
simulation/scripts/: sim_bridge.py
simulation/src/: main.c  sim_manager.c
tests/inc/: hal_mock.h  test_bldc_driver.h  test_bldc_model.h  test_bldc_sensorless_driver.h  test_math_utils.h  test_pid.h
tests/src/: hal_mock.c  test_bldc_driver.c  test_bldc_model.c  test_bldc_sensorless_driver.c  test_main.c  test_math_utils.c  test_pid.c
utils/inc/: math_utils.h  pid.h  pll.h  svpwm.h  transform_utils.h  utils_error.h
utils/src/: math_utils.c  pid.c  pll.c  svpwm.c  transform_utils.c
